@@ -1,3 +1,4 @@
+#!perl
 
 use 5.006;
 use strict;
@@ -12,15 +13,15 @@ name		'Math-BigInt-FastCalc';
 all_from	'lib/Math/BigInt/FastCalc.pm';
 
 requires	'perl'			=> '5.006';
-requires	'Math::BigInt'		=> '1.999702';
-requires	'Math::BigInt::Calc'	=> '1.999702';
+requires	'Math::BigInt'		=> '1.999703';
+requires	'Math::BigInt::Calc'	=> '1.999703';
 requires	'XSLoader'		=> '0';
 
 build_requires	'Test::More'	=> 0.62;
 
 license		'perl';
 
-author		'Tels <nospam-abuse@bloodgate.com>';
+author     	'Peter John Acklam <pjacklam@gmail.com>';
 
 # install this over the version in the Perl core
 install_as_core;
