@@ -752,18 +752,40 @@ __DATA__
 &^=
 5:7:2
 &blog
+#
 NaNlog:2:NaN
 122:NaNlog:NaN
 NaNlog1:NaNlog:NaN
-122:inf:NaN
+#
+122:inf:0
 inf:122:inf
-122:-inf:NaN
--inf:122:NaN
+122:-inf:0
+-inf:122:inf
 -inf:-inf:NaN
-inf:inf:inf
-0:4:NaN
+0:4:-inf
 -21:4:NaN
 21:-21:NaN
+#
+0:-inf:NaN
+0:-1:NaN
+0:0:NaN
+0:1:NaN
+0:inf:NaN
+#
+1:-inf:0
+1:-1:0
+1:0:0
+1:1:NaN
+1:4:0
+1:inf:0
+#
+inf:-inf:NaN
+inf:-1:NaN
+inf:0:NaN
+inf:1:NaN
+inf:4:inf
+inf:inf:NaN
+#
 # normal results
 1024:2:10
 81:3:4
@@ -2715,13 +2737,13 @@ NaNas_bin:NaN
 # overloaded functions
 &log
 -1:NaN
-0:NaN
+0:-inf
 1:0
 2:0
 3:1
 123456789:18
 1234567890987654321:41
--inf:NaN
+-inf:inf
 inf:inf
 NaN:NaN
 &exp
