@@ -1,5 +1,10 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2015-09-21 v0.34 pjacklam
+  * Sync test files with Math-BigInt-1.999703.
+  * Required version of Math-BigInt is now 1.999703.
+  * Update author information.
+
 2015-09-17 v0.33 pjacklam
   * Sync test files with Math-BigInt-1.999702.
   * Required version of Math-BigInt is now 1.999702.
